# formal_language

./: CMakeLists.txt  README.md  build.sh  start.sh
grammar/: grammar_1.txt  grammar_2.txt  no_lr_1.txt
source/: earley.h  grammar.cpp  grammar.h  lr.cpp  lr.h  main.cpp  parser.h  reader.cpp  reader.h
sourse/: earley.cpp  earley.h  grammar.h  main.cpp  parser.cpp
test/: test.txt  test_1.txt  test_2.txt
